# project-x

./: requirements.txt
.devcontainer/: devcontainer.json
AITradeAnalyzer/AITradeAnalyzer/: app.py  pyproject.toml  readme.md  replit.md
AITradeAnalyzer/AITradeAnalyzer/ai_assistant/: backtesting_engine.py  institutional_analysis.py  trading_chat.py
AITradeAnalyzer/AITradeAnalyzer/data/: market_data.py  news_fetcher.py  tradingview_integration.py
AITradeAnalyzer/AITradeAnalyzer/ml_models/: trade_predictor.py
AITradeAnalyzer/AITradeAnalyzer/technical_analysis/: ema_analysis.py  ict_smc.py  volume_analysis.py
AITradeAnalyzer/AITradeAnalyzer/utils/: plotting.py  trade_signals.py
