[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.63",
]
